Bug 405160 - File open/save dialogs started by flatpaks show some pixelated icons when fractional display scaling is used
Summary: File open/save dialogs started by flatpaks show some pixelated icons when fra...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Open/save dialogs (other bugs)
Version First Reported In: 5.55.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-07 00:55 UTC by Patrick Silva
Modified: 2019-03-08 08:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.3
Sentry Crash Report:


Attachments
screenshot (97.57 KB, image/png)
2019-03-07 00:55 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-03-07 00:55:29 UTC
Created attachment 118613 [details]
screenshot

STEPS TO REPRODUCE
1. open system settings > display and monitor > scale display, set display scaling factor to 1.2 and restart plasma
2. install kdenlive or kolourpaint via flatpak/flathub
https://flathub.org/apps/details/org.kde.kdenlive
https://flathub.org/apps/details/org.kde.kolourpaint 
3. open kdenlive or kolourpaint and press ctrl+o (file open dialog shows up) 

OBSERVED RESULT
some icons are pixelated, see the screenshot please

EXPECTED RESULT
crisp icons

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.15.2
KDE Frameworks Version: 5.55.0
Qt Version: 5.12.1

Additional info
File save dialog is also affected.
This bug does not affect dialogs started by apps installed from Arch repos.
Comment 1 Kai Uwe Broulik 2019-03-08 08:38:13 UTC
Git commit 90f655a146d1fd19a4ac6c14cf3452f9f7034b0b by Kai Uwe Broulik.
Committed on 08/03/2019 at 08:37.
Pushed by broulik into branch 'Plasma/5.15'.

Use high dpi pixmaps
FIXED-IN: 5.15.3

Differential Revision: https://phabricator.kde.org/D19580

M  +1    -0    src/xdg-desktop-portal-kde.cpp

https://commits.kde.org/xdg-desktop-portal-kde/90f655a146d1fd19a4ac6c14cf3452f9f7034b0b