Use high dpi pixmaps

BUG: 405160
FIXED-IN: 5.15.3

Differential Revision: https://phabricator.kde.org/D19580