src/xdg-desktop-portal-kde.cpp
@@ -28,6 +28,7 @@ Q_LOGGING_CATEGORY(XdgDesktopPortalKde, "xdp-kde")
 
 int main(int argc, char *argv[])
 {
+    QCoreApplication::setAttribute(Qt::AA_UseHighDpiPixmaps);
     QApplication a(argc, argv);
     a.setQuitOnLastWindowClosed(false);
 
